datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

generator client {
  provider = "prisma-client-js"
}

generator erd {
  provider = "prisma-erd-generator"
  output   = "../MLD.svg"
  theme    = "default"
}

enum Role {
  CITOYEN
  MODERATEUR
  ADMINISTRATEUR
  SUPER_ADMINISTRATEUR
}

model User {
  id        Int      @id @default(autoincrement())
  email     String   @unique
  password  String
  role      Role     @default(CITOYEN)
  firstName String
  lastName  String
  isActive  Boolean  @default(true)
  createdAt DateTime @default(now())
  updatedAt DateTime @default(now()) @updatedAt

  ressources         Ressource[]
  comments           Comment[]
  favorites          Favorite[]
  savedResources     SavedResource[]
  exploitedResources ExploitedResource[]
  participations     Participation[]
  messagesSent       Message[]           @relation("SentMessages")
  connections        ConnectionLog[]
}

model Category {
  id         Int         @id @default(autoincrement())
  name       String      @unique
  ressources Ressource[]
}

model Ressource {
  id          Int      @id @default(autoincrement())
  title       String
  content     String?
  type        String
  isPublic    Boolean  @default(true)
  isValidated Boolean  @default(false)
  views       Int      @default(0)
  createdAt   DateTime @default(now())
  updatedAt   DateTime @default(now()) @updatedAt

  authorId    Int

  author      User     @relation(fields: [authorId], references: [id], onDelete: Cascade)

  categoryId  Int?
  category    Category? @relation(fields: [categoryId], references: [id])

  comments      Comment[]
  favoritedBy   Favorite[]
  savedBy       SavedResource[]
  exploitedBy   ExploitedResource[]
  viewLogs      ViewLog[]
  participations Participation[]
  messages       Message[]
}

model Comment {
  id          Int      @id @default(autoincrement())
  content     String
  createdAt   DateTime @default(now())

  authorId    Int

  author      User     @relation(fields: [authorId], references: [id], onDelete: Cascade)

  ressourceId Int
  ressource   Ressource @relation(fields: [ressourceId], references: [id], onDelete: Cascade)

  parentId    Int?
  parent      Comment?  @relation("Replies", fields: [parentId], references: [id], onDelete: Cascade)
  replies     Comment[] @relation("Replies")
}

model Message {
  id          Int       @id @default(autoincrement())
  content     String
  createdAt   DateTime  @default(now())

  senderId    Int

  sender      User      @relation("SentMessages", fields: [senderId], references: [id], onDelete: Cascade)

  ressourceId Int
  ressource   Ressource @relation(fields: [ressourceId], references: [id], onDelete: Cascade)
}

model Participation {
  id          Int       @id @default(autoincrement())
  userId      Int
  user        User      @relation(fields: [userId], references: [id], onDelete: Cascade)
  ressourceId Int
  ressource   Ressource @relation(fields: [ressourceId], references: [id], onDelete: Cascade)
  status      String    @default("INVITED")
  createdAt   DateTime  @default(now())

  @@unique([userId, ressourceId])
}

model ExploitedResource {
  id          Int       @id @default(autoincrement())
  userId      Int
  user        User      @relation(fields: [userId], references: [id], onDelete: Cascade)
  ressourceId Int
  ressource   Ressource @relation(fields: [ressourceId], references: [id], onDelete: Cascade)
  createdAt   DateTime  @default(now())

  @@unique([userId, ressourceId])
}

model Favorite {
  id          Int       @id @default(autoincrement())
  userId      Int
  user        User      @relation(fields: [userId], references: [id], onDelete: Cascade)
  ressourceId Int
  ressource   Ressource @relation(fields: [ressourceId], references: [id], onDelete: Cascade)
  createdAt   DateTime  @default(now())

  @@unique([userId, ressourceId])
}

model SavedResource {
  id          Int       @id @default(autoincrement())
  userId      Int
  user        User      @relation(fields: [userId], references: [id], onDelete: Cascade)
  ressourceId Int
  ressource   Ressource @relation(fields: [ressourceId], references: [id], onDelete: Cascade)
  createdAt   DateTime  @default(now())

  @@unique([userId, ressourceId])
}

model ViewLog {
  id          Int       @id @default(autoincrement())
  ressourceId Int
  ressource   Ressource @relation(fields: [ressourceId], references: [id], onDelete: Cascade)
  createdAt   DateTime  @default(now())
}

model ConnectionLog {
  id        Int      @id @default(autoincrement())
  userId    Int
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  createdAt DateTime @default(now())
}
generator dbml {
  provider   = "prisma-dbml-generator"
  output     = "../dbml"
  outputName = "MLD.dbml"
}

// Documentation du fichier
//
// - Role : Schema Prisma principal du backend.
// - Fonctionnement : Il configure PostgreSQL, genere le client Prisma et definit les enums, modeles, relations et contraintes uniques.
// - A retenir : Toute evolution de la base doit passer par ce fichier puis par une migration Prisma.
